[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/Cenario crossy road.png" type="Texture" id=1]
[ext_resource path="res://sprites/sprite do personagem.png" type="Texture" id=4]
[ext_resource path="res://sprites/casinha do balacobaco.png" type="Texture" id=5]
[ext_resource path="res://scripts/fase 2/crossingroad_scene.gd" type="Script" id=6]
[ext_resource path="res://scripts/fase 2/personagem.gd" type="Script" id=7]
[ext_resource path="res://sprites/esquerda.png" type="Texture" id=8]
[ext_resource path="res://sprites/direita.png" type="Texture" id=9]
[ext_resource path="res://sprites/cima.png" type="Texture" id=10]
[ext_resource path="res://sprites/baixo.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61.875, 41.375 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 21.75 )

[sub_resource type="Animation" id=3]
resource_name = "andar para direita"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Personagem/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "andar para esquerda"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Personagem/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=5]
resource_name = "andar para frente"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Personagem/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "andar para trás"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Personagem/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 106.75, 10 )

[node name="crossingroad" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 292.0 ],
"_edit_vertical_guides_": [ 334.0, -155.0 ]
}

[node name="mapa" type="Node" parent="."]

[node name="ruas" type="Node" parent="mapa"]

[node name="CenarioCrossyRoad" type="Sprite" parent="mapa/ruas"]
position = Vector2( 180, 320.5 )
scale = Vector2( 1.33333, 1.33125 )
texture = ExtResource( 1 )

[node name="baixo" type="TouchScreenButton" parent="mapa/ruas"]
position = Vector2( 242, 572 )
scale = Vector2( 2.15625, 2.15625 )
normal = ExtResource( 11 )

[node name="direita" type="TouchScreenButton" parent="mapa/ruas"]
position = Vector2( 295, 531 )
scale = Vector2( 1.96875, 1.96875 )
normal = ExtResource( 9 )

[node name="esquerda" type="TouchScreenButton" parent="mapa/ruas"]
position = Vector2( 193, 531 )
scale = Vector2( 2.0453, 2.0453 )
normal = ExtResource( 8 )

[node name="cima" type="TouchScreenButton" parent="mapa/ruas"]
position = Vector2( 241, 488 )
scale = Vector2( 2.15625, 2.15625 )
normal = ExtResource( 10 )

[node name="casa" type="Area2D" parent="mapa"]
position = Vector2( 83, 302 )
__meta__ = {
"_edit_group_": true
}

[node name="casa2" type="Sprite" parent="mapa/casa"]
position = Vector2( -2.3334, 0.666603 )
scale = Vector2( 0.445834, 0.470833 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mapa/casa"]
position = Vector2( -3, 0 )
shape = SubResource( 2 )

[node name="Personagem" type="KinematicBody2D" parent="mapa"]
position = Vector2( 180, 610 )
script = ExtResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="mapa/Personagem"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="mapa/Personagem"]
position = Vector2( 2, -2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 4
vframes = 4
frame = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="mapa/Personagem"]
"anims/andar para direita" = SubResource( 3 )
"anims/andar para esquerda" = SubResource( 4 )
"anims/andar para frente" = SubResource( 5 )
"anims/andar para trás" = SubResource( 6 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( -22, 386 )

[node name="Barreira" type="StaticBody2D" parent="."]
position = Vector2( 294, 301 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barreira"]
position = Vector2( -43.75, -1 )
shape = SubResource( 7 )

[connection signal="pressed" from="mapa/ruas/baixo" to="mapa/Personagem" method="_on_baixo_pressed"]
[connection signal="released" from="mapa/ruas/baixo" to="mapa/Personagem" method="_on_baixo_released"]
[connection signal="pressed" from="mapa/ruas/direita" to="." method="_on_direita_pressed"]
[connection signal="pressed" from="mapa/ruas/direita" to="mapa/Personagem" method="_on_direita_pressed"]
[connection signal="released" from="mapa/ruas/direita" to="." method="_on_direita_released"]
[connection signal="released" from="mapa/ruas/direita" to="mapa/Personagem" method="_on_direita_released"]
[connection signal="pressed" from="mapa/ruas/esquerda" to="mapa/Personagem" method="_on_esquerda_pressed"]
[connection signal="released" from="mapa/ruas/esquerda" to="mapa/Personagem" method="_on_esquerda_released"]
[connection signal="pressed" from="mapa/ruas/cima" to="mapa/Personagem" method="_on_cima_pressed"]
[connection signal="released" from="mapa/ruas/cima" to="mapa/Personagem" method="_on_cima_released"]
[connection signal="body_entered" from="mapa/casa" to="mapa/Personagem" method="_on_casa_body_entered"]
